--- a/app/Resources/views/pagesFixes/afadecContent.html.twig
+++ b/app/Resources/views/pagesFixes/afadecContent.html.twig
@@ -49,7 +49,7 @@
 </div>
 
 <div class="process-1 mt-0 pt-60 pb-60" data-parallax="scroll"
-     data-image-src="{{ asset('educomp/images/cta-background.jpg') }}">
+     data-image-src="{{ asset('educomp/images/bandeau2.png') }}">
     <div class="container">
         <p class="inverse"><b>Tous ceux qui veulent préparer un concours de recrutement pour l’enseignement primaire ou
                 secondaire</b> peuvent bénéficier des formations à distance dispensées sur le site <a
@@ -58,12 +58,12 @@
             rattachés) préparant un Master MEEF et souhaitant compléter leur formation par des cours à distance,
             notamment :</p>
         <ul class="list-default inverse">
-            <li>À tous les étudiants préparant le concours de recrutement de professeurs des écoles (CRPE) ;</li>
-            <li>À tous les étudiants préparant les concours de recrutement de professeurs certifiés (CAPES/CAFEP) dans
+            <li class="studitWhiteFC">À tous les étudiants préparant le concours de recrutement de professeurs des écoles (CRPE) ;</li>
+            <li class="studitWhiteFC">À tous les étudiants préparant les concours de recrutement de professeurs certifiés (CAPES/CAFEP) dans
                 l’une des 8 disciplines portées par la plateforme (mathématiques, lettres modernes, histoire-géographie,
                 anglais, espagnol, EMCC, SVT et physique-chimie) ;
             </li>
-            <li>Aux professeurs stagiaires qui bénéficient d’une formation didactique pour les disciplines dites « rares
+            <li class="studitWhiteFC">Aux professeurs stagiaires qui bénéficient d’une formation didactique pour les disciplines dites « rares
                 » : allemand, espagnol, philosophie, documentation, SES, STMS biotechnologie, Sciences industrielles,
                 Economie et gestion, Arts plastiques, Arts appliqués.
             </li>
