--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -795,6 +795,9 @@ label.alertMustBeSet{
     top: -100px;
     visibility: hidden;
 }
+ul.list-default>li.studitWhiteFC:before{
+    color: #fff;
+}
 
 
 /* MEDIA QUERIES */
