--- a/web/css/style.css
+++ b/web/css/style.css
@@ -971,7 +971,7 @@ blockquote footer{
 /****** Call To Action ******/
 
 .cta-dark-full{
-    background-image:url(../educomp/images/cta-background.jpg);
+    background-image:url(../educomp/images/bandeau2.png);
     overflow: hidden;
     padding: 70px 0;
     background-position: center center;
