--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -7,7 +7,7 @@
             <img src="{{ asset('educomp/images/applynow.png') }}" class="img-responsive center-block hidden-xs" alt="">
             <div class="apply-info">
                 {% set datetimeStart = '2017-07-01' %}
-                {% if "now"|date('Y-m-d') >= datetimeStart|date('Y-m-d') %}
+                {% if "now"|date('Y-m-d') >= datetimeStart|date('Y-m-d') or app.environment=='dev'  %}
                     <h4 class="heading text-center">CONNECTEZ VOUS</h4>
 
                     {% include "FOSUserBundle:Security:login_content.html.twig" %}
@@ -15,7 +15,7 @@
                     <hr/>
                     <a href="{{ path('fos_user_resetting_request') }}">Mot de passe oublié ?</a>
                     <br/>
-                    <a class="btn btn-primary btn-sm" href="{{ path('inscription') }}">Créer un compte</a>{{ date()|date('d') }}
+                    <a href="{{ path('inscription') }}">Créer un compte</a>
                 {% else %}
                     <div class="row">
                         <div class="col-sm-12">
