--- a/app/Resources/views/pagesFixes/nousContacter.html.twig
+++ b/app/Resources/views/pagesFixes/nousContacter.html.twig
@@ -1,5 +1,57 @@
+<script>
+    jQuery(document).ready(function () {
+        function isEmail(email) {
+            var regex = /^([a-zA-Z0-9_.+-])+\@(([a-zA-Z0-9-])+\.)+([a-zA-Z0-9]{2,4})+$/;
+            return regex.test(email);
+        }
+
+        $('.btnSendMailAdmin').click(function(){
+            var nom = $('#contact-name').val();
+            var email = $('#contact-email').val();
+            var sujet = $('#contact-number').val();
+            var message = $('#contact-message').val();
+            $('.champError').removeClass('champError');
+
+            if(!isEmail(email)){
+                $('#contact-email').addClass('champError');
+            }
+            if(!(nom.length > 1 && nom.length < 200 && /^[a-zA-Z]+$/.test(nom))){
+                $('#contact-name').addClass('champError');
+            }
+            if(sujet.length < 3 || sujet.length > 300){
+                $('#contact-number').addClass('champError');
+            }
+            if(message.length < 10 || message.length > 800){
+                $('#contact-message').addClass('champError');
+            }
+            if(!$('.champError').length){
+                $.ajax({
+                    type: 'POST',
+                    url: "{{path('emailingSendAdminMail_ajax')}}",
+                    async: false,
+                    dataType: "json",
+                    data: {
+                        nom: nom,
+                        message: message,
+                        email: email,
+                        sujet: sujet
+                    },
+                    success: function (data) {
+                        console.log('test');
+                        window.location.href = window.location.href;
+                    },
+                    error: function(xhr, status, error) {
+                        console.log(error);
+                    }
+                });
+            }
+
+        });
+    });
+</script>
+
 <h4 class="heading">Nous <span class="color2">contacter</span></h4>
-<form id="main-contact-form">
+<div>
     <div class="form-group">
         <label for="contact-name">Votre nom</label>
         <input id="contact-name" type="text" class="form-control" name="name">
@@ -17,5 +69,5 @@
         <textarea id="contact-message" class="form-control" rows="6" name="message"></textarea>
     </div>
     <p id="status"></p>
-    <button type="submit" name="submit" class="btn btn-primary">Envoyer</button>
-</form>
+    <a class="btn btn-primary btnSendMailAdmin">Envoyer</a>
+</div>
