--- a/web/css/stdi_style.css
+++ b/web/css/stdi_style.css
@@ -798,6 +798,9 @@ label.alertMustBeSet{
 ul.list-default>li.studitWhiteFC:before{
     color: #fff;
 }
+.champError{
+    box-shadow: 1px 1px 2px 2px rgba(198, 16, 0, 0.5) inset;
+}
 
 
 /* MEDIA QUERIES */
