--- a/app/Resources/views/pagesFixes/metierEnseignant.html.twig
+++ b/app/Resources/views/pagesFixes/metierEnseignant.html.twig
@@ -30,8 +30,8 @@
 
     <div class="clearfix"></div>
 
-    <div class="process-1 pt-60 pb-60" data-parallax="scroll"
-         data-image-src="{{ asset('educomp/images/bandeau3.png') }}">
+    <div class="process-1 mt-0 pt-60 pb-60 studitParalax70" data-parallax="scroll"
+         data-image-src="{{ asset('educomp/images/bandeau6.jpg') }}" data-positionX="0" data-positionY="0">
         <div class="container">
             <p class="inverse font20"><i>Si l’enseignant garde une forte responsabilité pour transmettre, il ne le peut
                     qu’en se faisant éducateur, apte à rejoindre chaque élève, dans ses besoins et ses aspirations. Ses
