--- a/app/Resources/views/discipline/myCourses.html.twig
+++ b/app/Resources/views/discipline/myCourses.html.twig
@@ -163,7 +163,7 @@
                                                     <h4 class="heading">{{ valC.nom }}</h4>
                                                     <ul class="course-features">
                                                         <li><i class="fa fa-map-marker"></i> À distance</li>
-                                                        <li><i class="fa fa-clock-o"></i> 2 mois</li>
+                                                        <!--<li><i class="fa fa-clock-o"></i> 2 mois</li>-->
                                                     </ul>
                                                     <p class="brief">{{ valC.description|raw }}</p>
                                                     <a href="{{ path('oneCours', {id: valC.id, mode: 'etu'}) }}" class="btn btn-primary btn-sm">Entrer</a>
