--- a/app/Resources/views/pagesFixes/metierEnseignant.html.twig
+++ b/app/Resources/views/pagesFixes/metierEnseignant.html.twig
@@ -30,8 +30,8 @@
 
     <div class="clearfix"></div>
 
-    <div class="process-1 mt-0 pt-60 pb-60 studitParalax65 studitParalaxOpa50" data-parallax="scroll"
-         data-image-src="{{ asset('educomp/images/bandeau7.jpg') }}" data-position="top left">
+    <div class="process-1 mt-0 pt-60 pb-60 studitParalax55 studitParalaxOpa50" data-parallax="scroll"
+         data-image-src="{{ asset('educomp/images/accueil.jpg') }}" data-position="right top">
         <div class="container">
             <p class="inverse font20"><i>Si l’enseignant garde une forte responsabilité pour transmettre, il ne le peut
                     qu’en se faisant éducateur, apte à rejoindre chaque élève, dans ses besoins et ses aspirations. Ses
