--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -169,7 +169,7 @@
                 </div>
                 <div class="col-sm-4 footer-widget">            <!-- Footer Widget - Contact Info -->
                     <h5 class="heading inverse">Nous <span class="color2">contacter</span></h5>
-                    <a href="" class="email"><i class="fa fa-facebook fa-fw"></i> notre Facebook</a>
+                    <!--<a href="" class="email"><i class="fa fa-facebook fa-fw"></i> notre Facebook</a>-->
                     <a href="mailto:contact.afadec@gmail.com" class="email"><i class="fa fa-envelope fa-fw"></i> contact.afadec@gmail.com</a>
                 </div>
             </div>
@@ -179,11 +179,11 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-sm-6 text-center">
-                    <span class="copyright">&copy; AFADEC 2016</span>           <!-- Copyright Text -->
+                    <span class="copyright">&copy; AFADEC 2017</span>           <!-- Copyright Text -->
                 </div>
                 <div class="col-sm-6 text-center">
                     <ul class="social">          <!-- Social Media Links -->
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                        <!--<li><a href="#"><i class="fa fa-facebook"></i></a></li>-->
                     </ul>
                 </div>
             </div>
