--- a/app/Resources/views/discipline/myCourses.html.twig
+++ b/app/Resources/views/discipline/myCourses.html.twig
@@ -134,7 +134,7 @@
                                         {% endif %}
                                         {% if val.sessionsAlerte is defined %}
                                             {% for keyC,valC in val.sessionsAlerte %}
-                                                <div class="course-list course-sessionAlerte" data-idSession="{{ valC.id }}" style="margin-top: 0;">
+                                                <div class="course-list course-sessionAlerte" data-idSession="{{ valC.session.id }}" style="margin-top: 0;">
                                                     <div class="course-media">
                                                         <img src="{{ asset('images/') }}{{ valC.imgFilePath }}" class="img-responsive course-img" alt="">
                                                     </div>
@@ -143,9 +143,9 @@
                                                         <ul class="course-features">
                                                             <li><i class="fa fa-map-marker"></i> À distance</li>
                                                             <br/>
-                                                            <li><i class="fa fa-hourglass-start"></i> {{ valC.dateDebut|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}</li>
+                                                            <li><i class="fa fa-hourglass-start"></i> {{ valC.session.dateDebut|localizeddate('none', 'none', null, null, 'd LLLL Y' ) }}</li>
                                                         </ul>
-                                                        <p class="brief">{{ valC.messageAlerte }}</p>
+                                                        <p class="brief">{{ valC.session.messageAlerte }}</p>
                                                         <p class="brief fdbackInscUserSess{% if not val.sessionsAlerteIsInscrit[keyC] %} hidden{% endif %}">Vous êtes inscrit à cette future session.</p>
                                                         {% if not val.sessionsAlerteIsInscrit[keyC] %}
                                                             <a class="btn btn-warning btn-sm btnInscrSess">S'inscrire</a>
