--- a/app/Resources/views/cours/oneAdmin.html.twig
+++ b/app/Resources/views/cours/oneAdmin.html.twig
@@ -1282,8 +1282,8 @@
                             <li role="presentation" class="active"><a href="#btnListLien" aria-controls="btnListLien" role="tab" data-toggle="tab"><i class="fa fa-external-link  fa-fw"></i> Lien</a></li>
                             <li role="presentation"><a href="#btnListDevoir" aria-controls="btnListDevoir" role="tab" data-toggle="tab"><i class="fa fa-university fa-fw"></i> Devoir</a></li>
                             <li role="presentation"><a href="#btnListGroupe" aria-controls="btnListGroupe" role="tab" data-toggle="tab"><i class="fa fa-cubes fa-fw"></i> Groupe de liens</a></li>
-                            <li role="presentation"><a href="#btnListForum" aria-controls="btnListForum" role="tab" data-toggle="tab"><i class="fa fa-cubes fa-fw"></i> Forum</a></li>
-                            <li role="presentation"><a href="#btnListChat" aria-controls="btnListChat" role="tab" data-toggle="tab"><i class="fa fa-cubes fa-fw"></i> Chat</a></li>
+                            <li role="presentation"><a href="#btnListForum" aria-controls="btnListForum" role="tab" data-toggle="tab"><i class="fa fa-users fa-fw"></i> Forum</a></li>
+                            <li role="presentation"><a href="#btnListChat" aria-controls="btnListChat" role="tab" data-toggle="tab"><i class="fa fa-comments-o fa-fw"></i> Chat</a></li>
                         </ul>
                         <div class="tab-content">
                             <div role="tabpanel" class="tab-pane fade in active" id="btnListLien">
@@ -1601,8 +1601,8 @@
                                 <li role="presentation" class="active"><a href="#btnListLienModal" aria-controls="btnListLienModal" role="tab" data-toggle="tab"><i class="fa fa-external-link  fa-fw"></i> Lien</a></li>
                                 <li role="presentation"><a href="#btnListDevoirModal" aria-controls="btnListDevoirModal" role="tab" data-toggle="tab"><i class="fa fa-university fa-fw"></i> Devoir</a></li>
                                 <li role="presentation"><a href="#btnListGroupeModal" aria-controls="btnListGroupeModal" role="tab" data-toggle="tab"><i class="fa fa-cubes fa-fw"></i> Groupe de liens</a></li>
-                                <li role="presentation"><a href="#btnListForumModal" aria-controls="btnListForumModal" role="tab" data-toggle="tab"><i class="fa fa-cubes fa-fw"></i> Forum</a></li>
-                                <li role="presentation"><a href="#btnListChatModal" aria-controls="btnListChatModal" role="tab" data-toggle="tab"><i class="fa fa-cubes fa-fw"></i> Chat</a></li>
+                                <li role="presentation"><a href="#btnListForumModal" aria-controls="btnListForumModal" role="tab" data-toggle="tab"><i class="fa fa-users fa-fw"></i> Forum</a></li>
+                                <li role="presentation"><a href="#btnListChatModal" aria-controls="btnListChatModal" role="tab" data-toggle="tab"><i class="fa fa-comments-o fa-fw"></i> Chat</a></li>
                             </ul>
                             <div class="tab-content">
                                 <div role="tabpanel" class="tab-pane fade in active" id="btnListLienModal">
