--- a/app/Resources/views/emailing.html.twig
+++ b/app/Resources/views/emailing.html.twig
@@ -94,7 +94,7 @@
                         users: users
                     },
                     success: function (data) {
-
+                        window.location.href = window.location.href;
                     }
                 });
             });
