--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -122,6 +122,7 @@
                             <a href="#" data-userId="{{ app.user.id }}">{{ app.user.firstname }} {{ app.user.lastname }}</a>
                             <ul class="sub-menu" style="margin-left: -30px;">
                                 {% if app.user.hasRole('ROLE_SUPER_ADMIN') %}
+                                    <li><a target="_blank" href="{{ path('sonata_admin_dashboard') }}">BackOffice</a></li>
                                     <li><a href="{{ path('emailing') }}">Emailing</a></li>
                                 {% endif %}
                                 {% block vueAdmin %}{% endblock %}
