--- a/app/Resources/views/cours/adminBtns.html.twig
+++ b/app/Resources/views/cours/adminBtns.html.twig
@@ -7,8 +7,14 @@
                 <i class="activationBtn fa fa-square-o"></i>
             {% endif %}
         </li>
-        <li class="myBtn btnMoveUp btnLeft"><i class="fa fa-arrow-up"></i></li>
-        <li class="myBtn btnMoveDown btnLeft"><i class="fa fa-arrow-down"></i></li>
+        <li class="btnLeft">
+            <span class="myBtn btnMoveUp btnCoteCote"><i class="fa fa-arrow-up"></i></span>
+            <span class="myBtn btnMoveDown btnCoteCote"><i class="fa fa-arrow-down"></i></span>
+        </li>
+        <li class="btnLeft">
+            <span class="myBtn btnMoveTotalUp btnCoteCote"><i class="fa fa-angle-double-up"></i></span>
+            <span class="myBtn btnMoveTotalDown btnCoteCote"><i class="fa fa-angle-double-down"></i></span>
+        </li>
         <li class="myBtn btnDelete btnLeft btnDeleteElem"><i class="fa fa-trash"></i></li>
         <li class="myBtn btnDelete btnLeft btnSupprElem"><i class="fa fa-times"></i></li>
     </ul>
