--- a/app/Resources/views/cours/adminLibre.html.twig
+++ b/app/Resources/views/cours/adminLibre.html.twig
@@ -16,7 +16,7 @@
     <div class="formCol col-md-11">
         <div class="row">
             <div class="col-xs-12 noPadding">
-                <textarea data-champName="description" id="zone_{{ zoneId }}_lien_{{ itemId }}_descr" class="simpleEditor editor champAdmin" readonly>{{ description }}</textarea>
+                <textarea data-champName="description" id="zone_{{ zoneId }}_lien_{{ itemId }}_descr" class="complexEditor editor champAdmin" readonly>{{ description }}</textarea>
             </div>
         </div>
     </div>
